--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
